--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.henrydhc.naiveeconomy</groupId>
     <artifactId>NaiveEconomy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>build-${env.BUILD_NUMBER}</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
