--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,3 +7,5 @@ lang: "en"
 # Enable this to let players get messages when other plugins conduct transactions
 # on their account
 enable-transaction-notice: true
+# Enable cache messages
+enable-cache-messages: false
